--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -113,7 +113,14 @@
                 <input type="checkbox" class="form-check-input" id="termsCheckbox" name="terms" required>
                 <label class="form-check-label" for="termsCheckbox">Agree to terms and conditions</label>
             </div>
-            <input type="submit" value="Save" class="btn btn-outline-info text-grey rounded-pill btn-lg">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <input type="submit" value="Save" class="btn btn-outline-info text-grey rounded-pill btn-lg" style="width: 300px; height: 30px; font-size: 12px;">
+                </div>
+            </div>
+            
+            
+            
         </div>
         
 
