--- a/templates/bank_account_list.html
+++ b/templates/bank_account_list.html
@@ -111,7 +111,7 @@ left: 50%; */
                             </div>
                             <div class="col-md-4" style="width: 100%; margin-top: 8px;">
                                 <div class="dropdown">
-                                    <button type="button" class="btn btn-outline-info dropdown-toggle text-grey" data-toggle="dropdown" style="width: 50%; font-size: 14px;">
+                                    <button type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" style="width: 50%; font-size: 14px;">
                                         Filter by
                                     </button>
                                     <div class="dropdown-menu">
